<resources>
    <string name="app_name">YourCinemaCritics</string>
    <string name="movie_name">MOVIE NAME</string>
    <string name="star_rating">star rating</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="this_is_a_short_overview_of_this_movie">This is a short overview of this movie</string>
    <string name="movie_poster">movie poster</string>
    <string name="button_icon">button_icon</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_an_account_yet">Not registered an account yet?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="create_new_account">Create new account</string>
    <string name="or">OR</string>
    <string name="register">REGISTER</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="gmail_putin_com">gmail@putin.com</string>
    <string name="cyka_blyat">cyka blyat</string>
    <string name="_23_11_2020">23/11/2020</string>
    <string name="avatar">avatar</string>
    <string name="trending">Trending</string>
    <string name="comment_background">comment background</string>
    <string name="imdb_6_7_10">IMDB: 6.7/10</string>
    <string name="action_comedy">Action, Comedy</string>
    <string name="play_trailer">play trailer</string>
    <string name="back">back</string>
    <string name="type_something">Search…</string>
    <string name="comment_something">Write comment here…</string>
    <string name="no_result">No search result</string>
    <string name="send_comment">send comment</string>
    <string name="logout">logout</string>
    <string name="oauth2ids">440106815243-jf163qfvtvmf41o8vakgerdna6edr3ti.apps.googleusercontent.com</string>
    <string name="hello">Hello,</string>
    <string name="thuan_gmail_com">Guest</string>
    <string name="search_movies">SEARCH MOVIES</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="favorite_movies">FAVORITE MOVIES</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="code_butchers">CodeButchers&#174; 2020</string>
    <string name="app_name_launcher">Your Cinema Critics</string>
    <string name="no_internet">No Internet connection</string>
    <string name="turn_on_light_mode">Turn on Light mode</string>
    <string name="turn_on_dark_mode">Turn on Dark mode</string>
    <string name="coming_up">Coming Up</string>
    <string name="top_rated">Top Rated</string>
    <string name="latest">Latest</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="powered_by">Powered by</string>
    <string name="the_movie_db">The movie db</string>
    <string name="imdb">IMDB:</string>
    <string name="your_cinema_critics_v3_0">Your Cinema Critics v3.0</string>
    <string name="release_day_15_12_2020">Release day: 15/12/2020</string>
    <string name="personalization">PERSONALIZATION</string>
    <string name="top_rated_latest_upcoming_movies">TOP RATED, LATEST, UPCOMING MOVIES</string>
    <string name="movie_backdrops">MOVIE BACKDROPS</string>
    <string name="nguyen_tan_phat">Nguyen Tan Phat</string>
    <string name="le_duc_thuan">Le Duc Thuan</string>
    <string name="nguyen_chau_quang_minh">Nguyen Chau Quang Minh</string>
    <string name="special_thanks_to">Special Thanks To</string>
    <string name="mr_tran_the_vu_our_android_lecturer">Mr. Tran The Vu (Our Android Lecturer)</string>
    <string name="this_product_uses_the_tmdb_api_but_is_not_endorsed_or_certified_by_tmdb">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="what_s_new_in_version_3_0">What\'s new in version 3.0:</string>
    <string name="le_vinh_nhan_duc">Le Vinh Nhan Duc</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science fiction</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
    <string name="account_settings">Account settings</string>
    <string name="change">Change</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="update">UPDATE</string>
    <string name="favorite">Favorite</string>
    <string name="loading">LOADING</string>
    <string name="rating">Rating:</string>
    <string name="_6_75">6.75</string>
    <string name="comments">Comments</string>
    <string name="photos">Photos</string>
</resources>