<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:background="@color/black"
    tools:context=".activities.CommentActivity">

    <ImageView
        android:id="@+id/imgCmtBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:contentDescription="@string/comment_background"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/poster_demo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnDetailBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="12dp"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"
            android:contentDescription="@string/back" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/btnDetailFav"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/orange"
        android:background="@drawable/ic_round_favorite_24"
        app:layout_constraintEnd_toStartOf="@+id/btnDetailTrailer"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/add_to_favorite" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnDetailTrailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="8dp"
            android:background="@drawable/ic_round_play_arrow_24"
            android:contentDescription="@string/play_trailer" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtDetailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/movie_name"
        android:textColor="@color/button_white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDetailBack" />

    <TextView
        android:id="@+id/txtDetailReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_23_11_2020"
        android:textColor="@color/button_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txtDetailTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtDetailTitle" />

    <TextView
        android:id="@+id/txtDetailRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imdb_6_7_10"
        android:textColor="@color/button_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtDetailReleaseDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtDetailTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtDetailTitle" />

    <TextView
        android:id="@+id/txtDetailGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_comedy"
        android:textColor="@color/button_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/txtDetailReleaseDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtDetailRating"
        app:layout_constraintTop_toBottomOf="@+id/txtDetailRating" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detailRecView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="210dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDetailGenre"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="3"
        tools:listitem="@layout/comment_item" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnDetailCommentBox"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/edtDetailComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="10sp"
            android:autofillHints=""
            android:background="@null"
            android:inputType="text"
            android:hint="@string/type_something"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnDetailSendComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnDetailCommentBox">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@drawable/ic_round_send_24"
            android:backgroundTint="@color/orange"
            android:contentDescription="@string/send_comment" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>